--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Library</title>
   </head>
   <body>
-    <script src="./js/constructor.js" type="module"></script>
+    <div id="root"></div>
+    <!-- <script src="./js/constructor.js" type="module"></script> -->
+    <!-- <script src="./js/lection.js" type="module"></script> -->
+    <script src="./js/practica.js" type="module"></script>
   </body>
 </html>
