--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script src="./js/constructor.js" type="module"></script> -->
+    <script src="./js/constructor.js" type="module"></script>
     <!-- <script src="./js/lection.js" type="module"></script> -->
-    <script src="./js/practica.js" type="module"></script>
+    <!-- <script src="./js/practica.js" type="module"></script> -->
   </body>
 </html>
