--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./js/books.js" type="module"></script>
     <script src="./js/practica.js" type="module"></script>
   </body>
 </html>
