--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Library</title>
   </head>
   <body>
+    <!-- books -->
     <div id="root"></div>
-    <script src="./js/books.js" type="module"></script>
-    <script src="./js/practica.js" type="module"></script>
+    <!-- practika 15-02-2022 -->
+
+    <!-- <script src="./js/books.js" type="module"></script>
+    <script src="./js/practica.js" type="module"></script> -->
+    <script src="./js/practika15-02-22.js" type="module"></script>
   </body>
 </html>
