--- a/index.html
+++ b/index.html
@@ -8,12 +8,36 @@
     <title>Library</title>
   </head>
   <body>
+    <ul class="events"></ul>
+
+    <div class="controls">
+      <button type="button" data-btn="prev">Prev</button>
+      <ul class="link-list">
+        <li class="link-list__item">
+          <a class="link" href="">1</a>
+        </li>
+        <li class="link-list__item">
+          <a class="link" href="">2</a>
+        </li>
+        <li class="link-list__item">
+          <a class="link" href="">3</a>
+        </li>
+        <li class="link-list__item">
+          <a class="link" href="">4</a>
+        </li>
+        <li class="link-list__item">
+          <a class="link" href="">5</a>
+        </li>
+      </ul>
+      <button type="button" data-btn="next">Next</button>
+    </div>
     <!-- books -->
-    <div id="root"></div>
+    <!-- <div id="root"></div> -->
     <!-- practika 15-02-2022 -->
 
     <!-- <script src="./js/books.js" type="module"></script>
     <script src="./js/practica.js" type="module"></script> -->
-    <script src="./js/practika15-02-22.js" type="module"></script>
+    <!-- <script src="./js/practika15-02-22.js" type="module"></script> -->
+    <script src="./js/events.js" type="module"></script>
   </body>
 </html>
