--- a/index.html
+++ b/index.html
@@ -8,12 +8,30 @@
     <title>Library</title>
   </head>
   <body>
-    <ul class="events"></ul>
+    <!-- Панинация -->
+    <!-- <ul class="events"></ul>
     <div class="controls">
       <button type="button" data-btn="prev" disabled>Prev</button>
       <ul class="link-list"></ul>
       <button type="button" data-btn="next">Next</button>
-    </div>
+    </div> -->
+
+    <!-- Тренировка бесконечный скрол -->
+    <form action="" class="form">
+      <input type="text" />
+    </form>
+    <ul class="list">
+      <!-- <li>
+        <a
+          href="https://pixabay.com/get/g4d8b7d40258c5b5257f1bf36482feef0870a7fe47f7fe3d4398c5304dddc3d66861adcb75efb8adcc03ad60b08c0438fa901e291f9b6925272513193d3aeae36_1280.jpg"
+          ><img
+            src="https://pixabay.com/get/g8fdb101f5a06722e5b63d1ca6ec71aa05aaa284ca84b5396461f08d49adca3c2214fce3e10e1c3e03d1c050b6170ce07d1288170defc830683f9c16ed425b38a_640.jpg"
+            alt="house, pool, interior design"
+            data-source=""
+        /></a>
+      </li> -->
+    </ul>
+
     <!-- books -->
     <!-- <div id="root"></div> -->
     <!-- practika 15-02-2022 -->
@@ -21,6 +39,19 @@
     <!-- <script src="./js/books.js" type="module"></script>
     <script src="./js/practica.js" type="module"></script> -->
     <!-- <script src="./js/practika15-02-22.js" type="module"></script> -->
-    <script src="./js/events.js" type="module"></script>
+    <!-- <script src="./js/events.js" type="module"></script> -->
+    <!-- <script src="./js/scroll.js" type="module"></script> -->
+    <!-- Lodash library script file -->
+    <!-- <script
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
+
+    <script src="./js/codewars.js" type="module"></script>
   </body>
 </html>
