--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <!-- Панинация -->
-    <!-- <ul class="events"></ul>
+    <ul class="events"></ul>
     <div class="controls">
       <button type="button" data-btn="prev" disabled>Prev</button>
       <ul class="link-list"></ul>
       <button type="button" data-btn="next">Next</button>
-    </div> -->
+    </div>
 
     <!-- Тренировка бесконечный скрол -->
-    <form action="" class="form">
+    <!-- <form action="" class="form">
       <input type="text" />
     </form>
-    <ul class="list">
-      <!-- <li>
+    <ul class="list"> -->
+    <!-- <li>
         <a
           href="https://pixabay.com/get/g4d8b7d40258c5b5257f1bf36482feef0870a7fe47f7fe3d4398c5304dddc3d66861adcb75efb8adcc03ad60b08c0438fa901e291f9b6925272513193d3aeae36_1280.jpg"
           ><img
@@ -30,7 +30,7 @@
             data-source=""
         /></a>
       </li> -->
-    </ul>
+    <!-- </ul> -->
 
     <!-- books -->
     <!-- <div id="root"></div> -->
@@ -39,7 +39,7 @@
     <!-- <script src="./js/books.js" type="module"></script>
     <script src="./js/practica.js" type="module"></script> -->
     <!-- <script src="./js/practika15-02-22.js" type="module"></script> -->
-    <!-- <script src="./js/events.js" type="module"></script> -->
+    <script src="./js/events.js" type="module"></script>
     <!-- <script src="./js/scroll.js" type="module"></script> -->
     <!-- Lodash library script file -->
     <!-- <script
@@ -50,8 +50,8 @@
       referrerpolicy="no-referrer"
     ></script> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script> -->
 
-    <script src="./js/codewars.js" type="module"></script>
+    <!-- <script src="./js/codewars.js" type="module"></script> -->
   </body>
 </html>
