--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <!-- Панинация -->
-    <ul class="events"></ul>
+    <!-- <ul class="events"></ul>
     <div class="controls">
       <button type="button" data-btn="prev" disabled>Prev</button>
       <ul class="link-list"></ul>
       <button type="button" data-btn="next">Next</button>
-    </div>
+    </div> -->
 
     <!-- Тренировка бесконечный скрол -->
     <!-- <form action="" class="form">
@@ -36,10 +36,14 @@
     <!-- <div id="root"></div> -->
     <!-- practika 15-02-2022 -->
 
+    <!-- magic card -->
+    <div class="card">Magic Card</div>
+    <a href="https://mythrillfiction.com/" target="_blank">Mythrill</a>
+
     <!-- <script src="./js/books.js" type="module"></script>
     <script src="./js/practica.js" type="module"></script> -->
     <!-- <script src="./js/practika15-02-22.js" type="module"></script> -->
-    <script src="./js/events.js" type="module"></script>
+    <!-- <script src="./js/events.js" type="module"></script> -->
     <!-- <script src="./js/scroll.js" type="module"></script> -->
     <!-- Lodash library script file -->
     <!-- <script
